stud-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
  name: website-db 
  namespace: student-project
spec:
  serviceName: "postgres"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13.2
        ports:
        - containerPort: 5432
          name: website-db
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: db-pv-website-db-0
