stud-tolerations.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: student-project
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website
  labels:
    name: website
  namespace: student-project
spec:
  replicas: 1
  selector:
    matchLabels:
      name: website
  template:
    metadata:
      labels:
        name: website
    spec:
      containers:
      - name: website
        image: valkirium/website-php:3.0
        volumeMounts:
          - mountPath: /var/www/html
            name: my-volume
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 100m
            memory: 200Mi
      volumes:
      - name: my-volume
        hostPath:
          path: /root/Final_Student_Project/php_page
          type: Directory
      tolerations:
      - key: "key1"
        operator: "Exists"
        effect: "NoSchedule"
      - key: "key2"
        operator: "Exists"
        effect: "NoExecute"
---
apiVersion: v1
kind: Service
metadata:
  name: website
  labels:
    name: website
  namespace: student-project
spec:
  type: NodePort
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 30002 
  selector:
    name: website
