ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: website-ingress
  namespace: student-project
spec:
  rules:
    - host: website.foo.com
      http:
        paths:
        - backend:
            serviceName: website
            servicePort: 8080
